FIX: Ensure long descriptions don't overflow onto image in non  hover state

--- a/css/flickrgrid.css
+++ b/css/flickrgrid.css
@@ -68,6 +68,8 @@ ul.flickrGrid li .full-caption {
     top: -270px;
     text-align: left;
     padding: 10px;
+        overflow: hidden;
+
 }
 
 
